Field Level Security LWC and Apex classes

--- a/force-app/main/default/classes/VDT_DataCalculationService.cls
+++ b/force-app/main/default/classes/VDT_DataCalculationService.cls
@@ -1,8 +1,15 @@
+/**
+ * @description This Apex class contains all methods needed to trigger new calculation jobs and retrieve information for jobs that have been already calculated
+ *              (Master Data Analysis, Product Adoption, Field Occurrences, Field Level Security, Field Calculations)
+ * @author      BASE Life Science
+ * @since       2021.03.01
+ */
 public inherited sharing class VDT_DataCalculationService {
 
     public static final String MASTER_DATA_ANALYSIS_SUMMARY_FILE_NAME = 'onekey_analysis_summary';
     public static final String PRODUCT_ADOPTION_FILE_NAME = 'product_adoption_summary';
     public static final String TERRITORY_ANALYSIS_FILE_NAME = 'territory_management';
+    public static final String FIELD_LEVEL_SECURITY_FILE_NAME = 'field_level_security';
 
     public static final String STATUS_COMPLETED = 'Completed';
     public static final String STATUS_ERROR = 'Error';
@@ -21,6 +28,94 @@ public inherited sharing class VDT_DataCalculationService {
         VDT_DataCalculationService.STATUS_ERROR 
     };
 
+    /**
+     * @description Creates a new VDT_Data_Calculation__c record, set its record type to `VDT_Field_Level_Security_Analysis`
+     *              and checks whether there are free slots to start the calculation, if so, it triggers a new batch job, if not,
+     *              the Calculation record's status is set to `In Queue` and the batch job will be triggered once a slot becomes available
+     * @param calculationParameters Object that contains the SObject API names the job will include in its calculations
+     */
+    public static void triggerFieldLevelSecurityAnalysisCalculation(FieldLevelSecurityParameter calculationParameters) {
+        Integer maxRunningCalculations = VDT_CustomMetadataService.getMaxNumberOfRunningCalculations();
+        List<VDT_Data_Calculation__c> inProgressCalculations = 
+            new VDT_DataCalculationSelector().getDataCalculationsByStatus(
+                new List<String>{
+                    VDT_DataCalculationService.STATUS_IN_PROGRESS
+                }
+            );
+        
+        if (inProgressCalculations.size() < maxRunningCalculations) {
+            calculationParameters.status = STATUS_IN_PROGRESS;
+        } else {
+            calculationParameters.status = STATUS_IN_QUEUE;
+        }
+
+        VDT_Data_Calculation__c dataCalculationRecord = initRecordForFieldLevelSecurity(calculationParameters);
+        insert dataCalculationRecord;
+
+        if (dataCalculationRecord.Status__c == STATUS_IN_PROGRESS) {
+            Integer batchSize = VDT_CustomMetadataService.getBatchSizeForObject(dataCalculationRecord.VDT_Object_Name__c);
+            VDT_FieldLevelSecurityBatch flsBatch = new VDT_FieldLevelSecurityBatch(dataCalculationRecord);
+            Database.executeBatch(flsBatch, batchSize);
+        }
+    }
+
+    /**
+     * 
+     * @param searchParameters Holds information to create the new record: Object Names and Status
+     * @return  `VDT_Data_Calculation__c` new record with its record type set to `VDT_Field_Level_Security_Analysis`
+     */
+    public static VDT_Data_Calculation__c initRecordForFieldLevelSecurity(FieldLevelSecurityParameter searchParameters) {
+        List<RecordType> recordTypes = VDT_RecordTypeService.getRecordTypeByObjectAndName('VDT_Data_Calculation__c', VDT_DataCalculationSelector.FIELD_LEVEL_SECURITY_RECORD_TYPE_DEV);
+        VDT_Data_Calculation__c dataCalculationRecord = new VDT_Data_Calculation__c(
+            VDT_Object_Name__c = String.join(searchParameters.objectNames, ','),
+            Status__c = searchParameters.status, 
+            RecordTypeId = recordTypes[0].Id
+        );
+        return dataCalculationRecord;
+    }
+
+    /**
+     * @description Search for a VDT_Data_Calculation record that matches with all the criterias from the search parameter,
+     *              If a record is found, then the calculations output is returned on the `data` property of the returned object.
+     *              The returned object also contains information about when the calculation was ran and its status.
+     * @param searchParameters Object with parameters used to find records (Object Names)
+     * @return  `DataCalculation` Object with all information for the Calculation Job
+     */
+    public static DataCalculation getExistingFieldLevelSecurityAnalysisCalculation(FieldLevelSecurityParameter searchParameters) {
+        List<String> objectCriterias = new List<String>();
+        for (String objectname : searchParameters.objectNames) {
+            objectCriterias.add('VDT_Object_Name__c = \'' + objectname + '\'');
+        }
+        List<VDT_Data_Calculation__c> calculations = new VDT_DataCalculationSelector()
+                                                        .withLimit(1)
+                                                        .withConditionals(new List<String>{
+                                                            'RecordType.DeveloperName = \'' + VDT_DataCalculationSelector.FIELD_LEVEL_SECURITY_RECORD_TYPE_DEV + '\'',
+                                                            '(' + String.join(objectCriterias, ' OR ') + ')'
+                                                        }).query();
+        
+        DataCalculation calculation = new DataCalculation();
+        if (!calculations.isEmpty()) {
+            calculation.status = calculations[0].Status__c;
+            calculation.calculationDate = String.valueOf(calculations[0].VDT_Calculation_Date__c);
+            Attachment att = VDT_AttachmentService.getAttachmentForRecord(
+                VDT_DataCalculationService.FIELD_LEVEL_SECURITY_FILE_NAME,
+                VDT_AttachmentService.JSON_FORMAT, 
+                calculations[0].Id
+            );
+
+            if (att != null) {
+                calculation.data = att.Body.toString();
+            }
+        }
+        return calculation;
+    }
+
+    /**
+     * @description Creates a new VDT_Data_Calculation__c record, set its record type to `VDT_Territory_Analysis`
+     *              and checks whether there are free slots to start the calculation, if so, it triggers a new `VDT_TerritoryManagementBatch` job, if not,
+     *              the Calculation record's status is set to `In Queue` and the batch job will be triggered once a slot becomes available
+     * @param calculationParameters Object that contains the SObject API names the job will include in its calculations
+     */
     public static void triggerTerritoryAnalysisCalculation(TerritoryAnalysisParameters calculationParameters) {
         Integer maxRunningCalculations = VDT_CustomMetadataService.getMaxNumberOfRunningCalculations();
             List<VDT_Data_Calculation__c> inProgressCalculations = 
@@ -48,6 +143,12 @@ public inherited sharing class VDT_DataCalculationService {
             }
     }
 
+    /**
+     * @description Creates a new VDT_Data_Calculation__c record, set its record type to `VDT_Object_Field_Analysis`
+     *              and checks whether there are free slots to start the calculation, if so, it triggers a new `VDT_FieldsSummaryCalculationBatch` job, if not,
+     *              the Calculation record's status is set to `In Queue` and the batch job will be triggered once a slot becomes available
+     * @param calculationParameters Object that contains the SObject API names the job will include in its calculations
+     */
     public static void triggerCalculation(CalculationParameters calculationParameters) {
         Integer maxRunningCalculations = VDT_CustomMetadataService.getMaxNumberOfRunningCalculations();
             List<VDT_Data_Calculation__c> inProgressCalculations = 
@@ -75,6 +176,12 @@ public inherited sharing class VDT_DataCalculationService {
             }
     }
 
+    /**
+     * @description Creates a new VDT_Data_Calculation__c record, set its record type to `VDT_Object_Field_Value_Occurrence`
+     *              and checks whether there are free slots to start the calculation, if so, it triggers a new `VDT_FieldValuesOccurrencesBatch` job, if not,
+     *              the Calculation record's status is set to `In Queue` and the batch job will be triggered once a slot becomes available
+     * @param calculationParameters Object that contains the SObject API names the job will include in its calculations
+     */
     public static void triggerFieldValueOccurrenceCalculation(CalculationParameters calculationParameters) {
         Integer maxRunningCalculations = VDT_CustomMetadataService.getMaxNumberOfRunningCalculations();
             List<VDT_Data_Calculation__c> inProgressCalculations = 
@@ -102,6 +209,11 @@ public inherited sharing class VDT_DataCalculationService {
             }
     }
 
+    /**
+     * @param calculationParameters contains all properties to create the new VDT Data Calculation Record
+     * @param recordTypeName Record Type API Name (it can be whether VDT_Object_Field_Analysis or VDT_Object_Field_Value_Occurrence)
+     * @return  `VDT_Data_Calculation__c`
+     */
     public static VDT_Data_Calculation__c initializeDataCalculation(CalculationParameters calculationParameters, String recordTypeName) {
         List<RecordType> recordTypes = VDT_RecordTypeService.getRecordTypeByObjectAndName('VDT_Data_Calculation__c', recordTypeName);
         return new VDT_Data_Calculation__c(
@@ -115,6 +227,12 @@ public inherited sharing class VDT_DataCalculationService {
         );
     }
 
+    /**
+     * @description Creates a new VDT_Data_Calculation__c record, set its record type to `VDT_Product_Adoption`
+     *              and checks whether there are free slots to start the calculation, if so, it triggers a new `VDT_ProductAdoptionBatch` job, if not,
+     *              the Calculation record's status is set to `In Queue` and the batch job will be triggered once a slot becomes available
+     * @param calculationParameters Object that contains the SObject API names the job will include in its calculations
+     */    
     public static void triggerProductAdoptionCalculation(ProductAdoptionParameters searchParameters) {
         Integer maxRunningCalculations = VDT_CustomMetadataService.getMaxNumberOfRunningCalculations();
         List<VDT_Data_Calculation__c> inProgressCalculations = new VDT_DataCalculationSelector().getDataCalculationsByStatus(new List<String>{ VDT_DataCalculationService.STATUS_IN_PROGRESS });
@@ -137,6 +255,12 @@ public inherited sharing class VDT_DataCalculationService {
         }
     }
 
+    /**
+     * @description Creates a new VDT_Data_Calculation__c record, set its record type to `VDT_Master_Data_Analysis`
+     *              and checks whether there are free slots to start the calculation, if so, it triggers a new `VDT_MasterAnalysisCalculationBatch` job, if not,
+     *              the Calculation record's status is set to `In Queue` and the batch job will be triggered once a slot becomes available
+     * @param calculationParameters Object that contains the SObject API names the job will include in its calculations
+     */     
     public static void triggerMasterAnalysisCalculation(CalculationAnalysisParameters searchParameters) {
         Integer maxRunningCalculations = VDT_CustomMetadataService.getMaxNumberOfRunningCalculations();
         List<VDT_Data_Calculation__c> inProgressCalculations = new VDT_DataCalculationSelector().getDataCalculationsByStatus(
@@ -160,6 +284,10 @@ public inherited sharing class VDT_DataCalculationService {
         }
     }
 
+    /**
+     * @param searchParameters object that contains all information for the new Product Adoption record: countries, start/end year, start/end month & status
+     * @return  `VDT_Data_Calculation__c` new record with record type set to `VDT_Product_Adoption`
+     */
     public static VDT_Data_Calculation__c initRecordForProductAdoption(ProductAdoptionParameters searchParameters) {
         List<RecordType> recordTypes = VDT_RecordTypeService.getRecordTypeByObjectAndName('VDT_Data_Calculation__c', VDT_DataCalculationSelector.PRODUCT_ADOPTION_RECORD_TYPE_DEV);
         VDT_Data_Calculation__c dataCalculationRecord = new VDT_Data_Calculation__c(
@@ -174,6 +302,10 @@ public inherited sharing class VDT_DataCalculationService {
         return dataCalculationRecord;
     }
 
+    /**
+     * @param searchParameters object that contains all information from the search form on the Master Data Analysis screen.
+     * @return  `VDT_Data_Calculation__c` new record with record type set to `VDT_Master_Data_Analysis`
+     */
     public static VDT_Data_Calculation__c initRecordForMasterAnalysis(CalculationAnalysisParameters searchParameters) {
         List<RecordType> recordTypes = VDT_RecordTypeService.getRecordTypeByObjectAndName('VDT_Data_Calculation__c', VDT_DataCalculationSelector.MASTER_ANALYSIS_RECORD_TYPE_DEV);
         VDT_Data_Calculation__c dataCalculationRecord = new VDT_Data_Calculation__c(
@@ -188,6 +320,10 @@ public inherited sharing class VDT_DataCalculationService {
         return dataCalculationRecord;
     }
 
+    /**
+     * @param searchParameters object that contains all information from the search form on the Territory Analysis screen.
+     * @return  `VDT_Data_Calculation__c` new record with record type set to `VDT_Territory_Analysis`
+     */    
     public static VDT_Data_Calculation__c initRecordForTerritoryAnalysis(TerritoryAnalysisParameters searchParameters) {
         List<RecordType> recordTypes = VDT_RecordTypeService.getRecordTypeByObjectAndName('VDT_Data_Calculation__c', VDT_DataCalculationSelector.TERRITORY_ANALYSIS_RECORD_TYPE_DEV);
         VDT_Data_Calculation__c dataCalculationRecord = new VDT_Data_Calculation__c(
@@ -198,6 +334,13 @@ public inherited sharing class VDT_DataCalculationService {
         return dataCalculationRecord;
     }
 
+    /**
+     * @description Search for a VDT_Data_Calculation record that matches with all the criterias from the search parameter,
+     *              If a record is found, then the calculations output is returned on the `data` property of the returned object.
+     *              The returned object also contains information about when the calculation was ran and its status.
+     * @param searchParameters Object with parameters used to find records (Object Names)
+     * @return  `DataCalculation` Object with all information for the Calculation Job
+     */
     public static DataCalculation getExistingTerritoryAnalysisCalculation(TerritoryAnalysisParameters searchParameters) {        
         List<VDT_Data_Calculation__c> calculations = new VDT_DataCalculationSelector().withLimit(1).getByTerritoryCalculationParameters(searchParameters);
         
@@ -218,6 +361,13 @@ public inherited sharing class VDT_DataCalculationService {
         return calculation;
     }
 
+    /**
+     * @description Search for a VDT_Data_Calculation record that matches with all the criterias from the search parameter,
+     *              If a record is found, then the calculations output is returned on the `data` property of the returned object.
+     *              The returned object also contains information about when the calculation was ran and its status.
+     * @param searchParameters Object with parameters used to find records (Object Names)
+     * @return  `DataCalculation` Object with all information for the Calculation Job
+     */
     public static DataCalculation getExistingCalculationMasterAnalysis(CalculationAnalysisParameters searchParameters) {
         List<VDT_Data_Calculation__c> calculations = new VDT_DataCalculationSelector().withLimit(1).getByAnalysisCalculationParameters(searchParameters);
         
@@ -238,6 +388,13 @@ public inherited sharing class VDT_DataCalculationService {
         return calculation;
     }
 
+    /**
+     * @description Search for a VDT_Data_Calculation record that matches with all the criterias from the search parameter,
+     *              If a record is found, then the calculations output is returned on the `data` property of the returned object.
+     *              The returned object also contains information about when the calculation was ran and its status.
+     * @param searchParameters Object with parameters used to find records (Object Names)
+     * @return  `DataCalculation` Object with all information for the Calculation Job
+     */
     public static DataCalculation getExistingCalculationProductAdoption(ProductAdoptionParameters searchParameters) {
         List<VDT_Data_Calculation__c> calculations = new VDT_DataCalculationSelector().getByProductAdoptionParameters(searchParameters);
         
@@ -258,6 +415,15 @@ public inherited sharing class VDT_DataCalculationService {
         return calculation;        
     }
 
+    /**
+     * @description Search for a VDT_Data_Calculation record that matches with all the criterias from the search parameter,
+     *              If a record is found, then the calculations output is returned on the `data` property of the returned object.
+     *              The returned object also contains information about when the calculation was ran and its status.
+     * @param calculationParameters Object with parameters used to find records (Object Names)
+     * @param recordTypeName What Record Type the User wants information from (it can be whether VDT_Object_Field_Analysis or VDT_Object_Field_Value_Occurrence)
+     * @param fileName Name of the attachment file that stores the calculation data (summary_calculation or field_values_occurrences)
+     * @return  `DataCalculation` Object with all information for the Calculation Job
+     */    
     public static DataCalculation getExistingCalculation(CalculationParameters calculationParameters, String recordTypeName, String fileName) {
         List<VDT_Data_Calculation__c> calculations = 
             new VDT_DataCalculationSelector().getByCalculationParameters(calculationParameters, recordTypeName);
@@ -281,29 +447,18 @@ public inherited sharing class VDT_DataCalculationService {
         return calculation;
     }
 
-    public static DataCalculation getCalculationForObject(String objectName) {
-        List<VDT_Data_Calculation__c> calculations = new VDT_DataCalculationSelector().getByObjectName(objectName);
-        
-        DataCalculation data = new DataCalculation();
-
-        if (calculations.isEmpty() == false) {
-            data.status = calculations[0].Status__c;
-            Attachment att = VDT_AttachmentService.getAttachmentForRecord(
-                VDT_ObjectService.FIELD_SUMMARY_CALCULATION_FILE_NAME,
-                VDT_AttachmentService.JSON_FORMAT, 
-                calculations[0].Id
-            );
-
-            data.data = att.Body.toString();
-        }
-        
-        return data;
-    }
-
+    /**
+     * @description Records returned on this method are shown on the `Logs` tab on each screen
+     * @return  `List<VDT_Data_Calculation__c>` all Calculation jobs that are completed (Whether Successfully or not)
+     */
     public static List<VDT_Data_Calculation__c> getFinishedCalculations() {
         return new VDT_DataCalculationSelector().getDataCalculationsByStatus(finishedCalculationStatuses);
     }
 
+    /**
+     * @description Information returned by this method is shown on the `Monitoring` tab presented on each screen
+     * @return  `MonitoringData` contains all information about the number of jobs in queue, currently executing
+     */
     public static MonitoringData getMonitoringData() {
         Integer maxCalculationRequests = 
             VDT_CustomMetadataService.getMaxNumberOfCalculationRequests();
@@ -329,6 +484,11 @@ public inherited sharing class VDT_DataCalculationService {
         return monitoringData;
     }
 
+    /**
+     * @description When an exception is thrown when running a Calculation job, the status of the record that launched the job must be updated to ERROR
+     * @param calculationId VDT_Data_Calculation__c record's ID
+     * @param status any valid option on `VDT_Data_Calculation__c.Status__c` (In Progress, Completed, In Queue, Error)
+     */
     public static void sendStatusUpdateEvent(Id calculationId, String status) {
         VDT_Calculation_Status_Update__e statusUpdate = new VDT_Calculation_Status_Update__e(
             Calculation_Id__c = calculationId,
@@ -406,4 +566,11 @@ public inherited sharing class VDT_DataCalculationService {
         public String status;
     }
 
+    public class FieldLevelSecurityParameter {
+
+        @AuraEnabled
+        public List<String> objectNames;
+        public String status;
+
+    }
 }
